# oi-speaker

./: .gitignore  NOTES.md  README.md  install-service.sh  pyproject.toml  system.json
.claude/: settings.json
models/openwakeword/: oi_speaker.onnx  oi_speaker.onnx.data  oi_speaker.pt
setup/: config-example.toml  oi-speaker.service  oi-speaker@.service
sounds/: startup.m4a
src/: speaker.py  web.py
src/static/: index.html
training/: diagnose.py  download-negatives.py  fetch-remote.py  generate-positives.py  oi-speaker.py  preprocess-positives.py  sync.py  update-wsl.py
